--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^6.4.6",
     "@next-auth/firebase-adapter": "^2.0.1",
     "@radix-ui/react-avatar": "^1.1.3",
+    "@radix-ui/react-radio-group": "^1.2.3",
     "@radix-ui/react-scroll-area": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.2",
     "@types/dom-speech-recognition": "^0.0.4",
@@ -22,6 +23,7 @@
     "axios": "^1.8.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "elevenlabs": "^1.52.0",
     "firebase": "^11.4.0",
     "lucide-react": "^0.476.0",
