--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
     "@next-auth/firebase-adapter": "^2.0.1",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-avatar": "^1.1.3",
+    "@radix-ui/react-checkbox": "^1.1.4",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-radio-group": "^1.2.3",
     "@radix-ui/react-scroll-area": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.2",
     "@types/dom-speech-recognition": "^0.0.4",
     "@types/firebase": "^2.4.32",
+    "autoprefixer": "^10.4.20",
     "axios": "^1.8.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -30,10 +34,14 @@
     "lucide-react": "^0.476.0",
     "next": "^15.2.0",
     "next-auth": "^4.24.11",
+    "next-themes": "^0.4.4",
     "openai": "^4.86.1",
+    "postcss": "^8.5.3",
     "react": "^19.0.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
     "react-toastify": "^11.0.5",
+    "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7"
   },
@@ -45,7 +53,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.2.0",
-    "tailwindcss": "^4",
+    "tailwindcss": "^4.0.9",
     "typescript": "^5"
   }
 }
